--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,9 @@ b {
   margin-top: 50px;
 }
 .section_image_about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .section_image_about span {
   font-size: 20px;
@@ -169,15 +172,107 @@ b {
   margin-bottom: 20px;
   color: #000;
 }
-.sub-image-about{
+.sub-image-about {
   width: 23%;
   height: auto;
   border-radius: 10px;
   margin-right: 10px;
 }
-.sub-image-about img{
+.sub-image-about img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
   object-fit: contain;
+}
+/* Swipper */
+.about-section .section-body {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+}
+.about-section .section-body .mycard {
+  width: 100%;
+  height: 100%;
+  margin-right: 10px;
+  border: 1px solid #e23f58;
+}
+/* Chương trình nổi bật */
+.special-programs {
+  margin-top: 50px;
+}
+.special-programs .section-header p {
+  font-size: 20px;
+  color: #e31837;
+  font-weight: 600;
+}
+.special-programs .section-header h3 {
+  font-size: 40px;
+  color: #006a31;
+  font-weight: 600;
+}
+.special-programs .section-body {
+  margin-top: 20px;
+}
+.container-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container-image .image {
+  width: 25%;
+  height: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  border: 1px solid #e23f58;
+  margin-right: 10px;
+}
+.container-image image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  aspect-ratio: 1;
+}
+/* Section Flashsale */
+.flashsale-section {
+  margin: 0 0 320px;
+  padding: 50px 0 0;
+  background-color: #006a31;
+}
+.flash-sale-title {
+  color: #ffb200;
+  display: block;
+  font-size: 20px;
+  font-family: "Lobster", sans-serif;
+  font-weight: 600;
+}
+.flash-sale-discount {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 56px;
+  z-index: 9;
+  padding: 0;
+  margin: 0 0;
+  position: relative;
+  display: block;
+  color: #fff;
+  font-weight: 700;
+}
+.flash-sale-description {
+  display: block;
+  margin-top: 20px;
+  font-size: 16px;
+  margin-bottom: 40px;
+  color: #fff;
+}
+.flash-sale-end {
+  color: #fff;
+}
+.flash-sale-products {
+  padding: 50px;
+  border-radius: 15px;
+  position: relative;
+  bottom: -50%;
+  background: #68ad88;
 }
