--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,10 @@
 }
 
 .nav-item {
-
   margin-left: 10px;
 }
 
-.nav-item a:hover {
+.nav-item .nav-link:hover {
   background-color: #e31837;
   color: white;
   border-radius: 10px;
